--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "gsap": "^3.8.0",
     "oimo": "^1.0.9",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.3.0",
+    "styled-components": "^5.3.3",
     "three": "^0.133.1"
   },
   "devDependencies": {
