--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.0",
+    "react-modal-hover": "^1.1.13",
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.3",
     "three": "^0.133.1"
