--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "bootstrap": "^5.1.3",
     "gsap": "^3.8.0",
     "oimo": "^1.0.9",
     "react": "^17.0.0",
@@ -18,7 +19,8 @@
     "react-modal-hover": "^1.1.13",
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.3",
-    "three": "^0.133.1"
+    "three": "^0.133.1",
+    "tweakpane": "^3.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
