--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "gsap": "^3.8.0",
     "oimo": "^1.0.9",
