--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "gsap": "^3.8.0",
@@ -19,6 +20,7 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.0",
     "react-modal-hover": "^1.1.13",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.3",
     "three": "^0.133.1",
