--- a/client/package.json
+++ b/client/package.json
@@ -16,20 +16,21 @@
     "bootstrap": "^5.1.3",
     "gsap": "^3.8.0",
     "oimo": "^1.0.9",
-    "react": "^17.0.0",
-    "react-bootstrap": "^2.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-datepicker": "^4.3.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal-hover": "^1.1.13",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "sass": "^1.43.4",
     "styled-components": "^5.3.3",
-    "three": "^0.133.1",
+    "three": "^0.134.0",
     "tweakpane": "^3.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.0",
-    "vite": "^2.6.4"
+    "@vitejs/plugin-react": "^1.0.7",
+    "vite": "^2.6.13"
   }
 }
