--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "ethers": "^5.5.1",
     "gsap": "^3.8.0",
     "oimo": "^1.0.9",
     "react": "^17.0.2",
