--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:3444",
   "scripts": {
     "dev": "vite",
+    "host":"vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
